# captain-manager-toolkit

./: .gitignore  Makefile  README.md  create_user_container.sh  init_assets.sh  pyproject.toml  requirements.txt
docker/: base.Dockerfile
docker/base/: base.Dockerfile  entrypoint.sh
docker/jump_server/: Dockerfile  create_user.sh  disable_ssh_password.sh  set_ssh_port.sh
docker/user_env/: entrypoint.sh  user_env.Dockerfile
docs/: docker_resources.md
pody/: README.md  docker_utils.py
pody/eng/: docker.py  errors.py  user.py
pody/svc/: app.py
scripts/: create_user_container.py  docker_utils.py  gpu_utils.py
